# darwin-jail

./: .gitignore  LICENSE  README.adoc  README.md  makejail.sh  makeroot.sh  mkjail  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-images.yml
darwinjail/: __main__.py  copy.sh  main.py  mkjail.files
macosjail/: __main__.py  main.py  mkjail.files
