[project]
name = "darwin-jail"
version = "0.0.1"
description = "Chroot jail for Darwin"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Marat Radchenko", email = "marat@slonopotamus.org" },
]
dependencies = [
    "packaging"
]

[build-system]
requires = [
    "setuptools >= 62",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.scripts]
darwin-jail = "darwinjail:main"

[tool.setuptools.package-data]
"*" = ["mkjail.files"]
